change in working product  model

--- a/configs/config.json
+++ b/configs/config.json
@@ -75,11 +75,13 @@
     "allSubcategorylistUser": "Get subcategoryList by_User Successfully.",
     "SubcategoryUpdated": "subCategory updated Successfully.",
     "SubcategoryDelete": "subCategory deleted Successfully.",
+    "singleSubCategoryAdmin": "Get SingleSubcategory by_Admin Successfully.",
     "Productadded": "Product added Successfully.",
     "Productalreadyadded": "Product already added. Please try another name.",
     "ProductUpdated": "Product updated Successfully.",
     "getProductSuccess": "Get product list Successfully.",
     "ProductNotfound": "Product notFound Successfully.",
+    "singleProductAdmin": "Get SingleProduct by_Admin Successfully.",
     "ProductDelete": "Product deleted Successfully.",
     "subscriptionPlanadded": "Subscription plan added Successfully.",
     "subscriptionPlanalreadyadded": "Subscription plan already added. Please try another name.",
