change in working deliveryLocation  model

--- a/configs/config.json
+++ b/configs/config.json
@@ -101,11 +101,12 @@
     "trialusersadded": "TrialUsers added Successfully.",
     "trialusersalreadyadded": "Trial Users already added. Please try again.",
     "alltrialuserslistAdmin": "Get trialUsersList by_Admin Successfully.",
-    "locationadded": "Location added Successfully.",
-    "locationalreadyadded": "Location already added. Please try another location.",
-    "locationUpdated": "Location updated Successfully.",
-    "locationDelete": "Location deleted Successfully.",
-    "getLocationSuccess": "Get location list Successfully.",
+    "deliveryLocationAdded": "DeliveryLocation added Successfully.",
+    "deliveryLocationAlreadyadded": "DeliveryLocation already added. Please try another deliverylocation.",
+    "deliveryLocationUpdated": "DeliveryLocation updated Successfully.",
+    "deliveryLocationNotFound": "DeliveryLocation Not found Successfully.",
+    "deliveryLocationDelete": "DeliveryLocation deleted Successfully.",
+    "getDeliveryLocationSuccess": "Get deliveryLocation list Successfully.",
     "zoneNameadded": "zoneName added Successfully.",
     "zoneNamealreadyadded": "zoneName already added. Please try another zoneName.",
     "zoneNameNotFound": "zoneName not found Successfully.",
