--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-geocoder": "^4.2.0",
     "nodemailer": "^6.9.11",
     "path": "^0.12.7",
+    "qrcode": "^1.5.3",
     "uuid": "^9.0.1"
   }
 }
