change in working brand and model and plansubscription  model

--- a/configs/config.json
+++ b/configs/config.json
@@ -119,11 +119,15 @@
     "brandalreadyadded": "Brand already added. Please try another name.",
     "brandUpdated": "Brand updated Successfully.",
     "getBrandSuccess": "Get brand list Successfully.",
+    "allBrandListAdmin": "Get brand list BY_Admin Successfully.",
     "brandInactive": "Brand inactive or not found.",
+    "brandNotFound": "Brand not found successfully.",
     "brandDelete": "Brand deleted Successfully.",
     "modeladded": "Model added Successfully.",
     "modelalreadyadded": "Model already added. Please try another name.",
     "modelInactive": "Model inactive or not found.",
+    "allModelListAdmin": "Get Model list BY_Admin Successfully.",
+    "modelNotFound": "Model not found SuccessFully.",
     "getModelSuccess": "Get model list Successfully.",
     "modelUpdated": "Model updated Successfully.",
     "modelDelete": "Model deleted Successfully.",
