--- a/configs/config.json
+++ b/configs/config.json
@@ -214,6 +214,14 @@
     "AssignZoneForAssignTruckListByAssignTruck": "AssignZoneForAssignTruckListByAssignTruck list for Admin Successfully.",
     "AssignZoneForAssignTruckInactive": "AssignZoneForAssignTruck inactive or not found.",
     "AssignZoneForAssignTruckDelete": "AssignZoneForAssignTruck deleted Successfully.",
+    "AssignUseraddressForBikedriveralreadyadded": "You have already added AssignUseraddressForBikedriver . Please try another AssignUseraddressForBikedriver.",
+    "AssignUseraddressForBikedriverListAdmin": "AssignUseraddressForBikedriver list for Admin Successfully.",
+    "AssignUseraddressForBikedriverUpdated": "AssignUseraddressForBikedriver Updated Successfully.",
+    "AssignUseraddressForBikedriverAdded": "AssignUseraddressForBikedriver Added Successfully.",
+    "AssignUseraddressForBikedriverDelete": "AssignUseraddressForBikedriver Delete Successfully.",
+    "AssignUseraddressForBikedriverInactive": "AssignUseraddressForBikedriver Inactive or not found Successfully.",
+    "AssignUseraddressForBikedriverNotFound": "AssignUseraddressForBikedriver not found Successfully.",
+
     "EnterEndDateGreaterThanStartDate": "Please Enter EndDate is GreaterThan StartDate Successfully.",
     "EnterStartDateGreaterThanEndDate": "Please Enter StartDate is GreaterThan previousEndDate Successfully."
   },
