change in working bikedriverdetails admin  model

--- a/configs/config.json
+++ b/configs/config.json
@@ -158,23 +158,27 @@
     "OrderNotfound": "Order notFound Successfully.",
     "OrderDelete": "Order deleted Successfully.",
     "allOrderlistAdmin": "Get OrderList by_Admin Successfully.",
-    "Driveralreadyadded": "Driver already added.",
-    "DriverDetailsAdded": "DriverDetails added Successfully.",
-    "DriverDetailsDeleted": "DriverDetails deleted Successfully.",
-    "DriverDetailsUpdated": "DriverDetails updated Successfully.",
-    "DriverNotfound": "Driver notFound Successfully.",
-    "DriverInactive": "Driver Inactive or notFound Successfully.",
-    "driverBankDetailsNotfound": "driverBank notFound Successfully.",
-    "driverAddressNotfound": "driverAddress notFound Successfully.",
-    "driverAddressInactive": "driverAddress notFound or Inactive Successfully.",
-    "DriverDocNotfound": "DriverDoc notFound Successfully.",
+    "allDriverlistAdmin": "Get BikeDriverList by_Admin Successfully.",
+    "allDriverlistByZoneIdAdmin": "Get BikeDriverList by ZoneId _Admin Successfully.",
+    "Driveralreadyadded": "BikeDriver already added.",
+    "DriverDetailsAdded": "BikeDriverDetails added Successfully.",
+    "DriverDetailsDeleted": "BikeDriverDetails deleted Successfully.",
+    "singleDriverDetails": "single BikeDriverDetails details By Admin Successfully.",
+    "getDriverProfileDetails": "get BikeDriverDetails Profile Successfully.",
+    "DriverDetailsUpdated": "BikeDriverDetails updated Successfully.",
+    "DriverNotfound": "BikeDriver notFound Successfully.",
+    "DriverInactive": "BikeDriver Inactive or notFound Successfully.",
+    "driverBankDetailsNotfound": "BikedriverBank notFound Successfully.",
+    "driverAddressNotfound": "BikedriverAddress notFound Successfully.",
+    "driverAddressInactive": "BikedriverAddress notFound or Inactive Successfully.",
+    "DriverDocNotfound": "BikeDriverDoc notFound Successfully.",
     "BikeDetailsNotfound": "BikeDetails notFound Successfully.",
     "BikeDetailsalreadyAdded": "BikeDetails already added Successfully.",
-    "DriverNotAdded": "Failed to create driver.",
-    "AddressNotAdded": "Failed to create Address for driver.",
-    "BankDetailsNotAdded": "Failed to create BankDetails of driver.",
-    "DocNotAdded": "Failed to create Doc of driver.",
-    "vehicleNotAdded": "Failed to create Vehicle for driver.",
+    "DriverNotAdded": "Failed to create Bikedriver.",
+    "AddressNotAdded": "Failed to create Address for Bikedriver.",
+    "BankDetailsNotAdded": "Failed to create BankDetails of Bikedriver.",
+    "DocNotAdded": "Failed to create Doc of Bikedriver.",
+    "vehicleNotAdded": "Failed to create Vehicle for Bikedriver.",
     "RequiredFilesMissing": "required all fields.",
     "VehicleImageRequired": "Plesae enter vehicle Image.",
     "ImageRequired": "Plesae enter all Image.",
