--- a/configs/config.json
+++ b/configs/config.json
@@ -174,6 +174,8 @@
     "DriverDocNotfound": "BikeDriverDoc notFound Successfully.",
     "BikeDetailsNotfound": "BikeDetails notFound Successfully.",
     "BikeDetailsalreadyAdded": "BikeDetails already added Successfully.",
+    "BikeDetailsCountAdmin": "BikeDetails Admin count Successfully.",
+    "BikeDetailsListAdmin": "BikeDetails List By_Admin Successfully.",
     "DriverNotAdded": "Failed to create Bikedriver.",
     "AddressNotAdded": "Failed to create Address for Bikedriver.",
     "BankDetailsNotAdded": "Failed to create BankDetails of Bikedriver.",
