--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase-admin": "^12.0.0",
     "fs": "^0.0.1-security",
     "googleapis": "^131.0.0",
+    "i": "^0.3.7",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.30.1",
@@ -34,8 +35,10 @@
     "node-cron": "^3.0.2",
     "node-geocoder": "^4.2.0",
     "nodemailer": "^6.9.11",
+    "npm": "^10.7.0",
     "path": "^0.12.7",
     "qrcode": "^1.5.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zlib": "^1.0.5"
   }
 }
