change in working qrcodegenerate in assignBikedriverForassigntruck  controller and create add controller

--- a/configs/config.json
+++ b/configs/config.json
@@ -211,7 +211,16 @@
     "AssignTruckForDriverListAdmin": "AssignTruckForDriver list for Admin Successfully.",
     "AssignTruckForDriverInactive": "AssignTruckForDriver inactive or not found.",
     "AssignTruckForDriverDelete": "AssignTruckForDriver deleted Successfully.",
-    "AssignZoneForAssignTruckadded": "AssignTruckForDriver added Successfully.",
+    "AssignOrderForBikedriverAdded": "AssignOrderForBikedriver added Successfully.",
+    "AssignOrderForBikedriveralreadyadded": "You have already added AssignOrderForBikedriver. Please try another AssignOrderForBikedriver.",
+    "AssignOrderForBikedriverNotfound": "AssignOrderForBikedriver notFound Successfully.",
+    "AssignOrderForBikedriverUpdated": "AssignOrderForBikedriver updated Successfully.",
+    "AssignOrderForBikedriverByIdAdmin": "AssignOrderForBikedriver  BYID Successfully.",
+    "AssignOrderForBikedriverByDriverIdAdmin": "AssignOrderForBikedriver  BYDRIVERID Successfully.",
+    "AssignOrderForBikedriverListAdmin": "AssignOrderForBikedriver list for Admin Successfully.",
+    "AssignOrderForBikedriverInactive": "AssignOrderForBikedriver inactive or not found.",
+    "AssignOrderForBikedriverDelete": "AssignOrderForBikedriver deleted Successfully.",
+    "AssignZoneForAssignTruckadded": "AssignOrderForBikedriver added Successfully.",
     "AssignZoneForAssignTruckalreadyadded": "You have already added AssignZoneForAssignTruck. Please try another AssignZoneForAssignTruck.",
     "AssignZoneForAssignTruckNotfound": "AssignZoneForAssignTruck notFound Successfully.",
     "AssignZoneForAssignTruckUpdated": "AssignZoneForAssignTruck updated Successfully.",
